--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Blaka+Hollow&family=Bungee&family=Bungee+Shade&family=Creepster&family=Faster+One&family=Frijole&family=Kumar+One&family=Luckiest+Guy&family=Monofett&family=Monoton&family=Montserrat:wght@300;400;500;600&family=Moo+Lah+Lah&family=Press+Start+2P&family=Rubik+Wet+Paint&family=Sansita+Swashed:wght@300&family=Shojumaru&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Blaka+Hollow&family=Bungee&family=Bungee+Shade&family=Creepster&family=Faster+One&family=Frijole&family=Kumar+One&family=Luckiest+Guy&family=Monofett&family=Monoton&family=Montserrat:wght@300;400;500;600&family=Moo+Lah+Lah&family=Nosifer&family=Press+Start+2P&family=Rubik+Wet+Paint&family=Sansita+Swashed:wght@300&family=Shojumaru&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Blaka+Hollow&family=Bungee&family=Bungee+Shade&family=Creepster&family=Faster+One&family=Frijole&family=Kdam+Thmor+Pro&family=Kumar+One&family=Luckiest+Guy&family=Monofett&family=Monoton&family=Montserrat:wght@300;400;500;600&family=Moo+Lah+Lah&family=Nosifer&family=Press+Start+2P&family=Rubik+Wet+Paint&family=Sansita+Swashed:wght@300&family=Shojumaru&display=swap');
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  cursor: url(images/sword.png), auto;
 }
 
 code {
