no change created after

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -64,7 +64,7 @@
 }
 
 
-/*******************RESPONSIVENESS********************/
+/*****************RESPONSIVENESS******************/
 @media screen and (max-width: 600px) {
     .section1 .head h2 {
         font-size: 4rem;
